rbac-best-practices/restrict-binding-system-groups/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-binding-system-groups
spec:
  validationFailureAction: audit
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
