rbac-best-practices/restrict-binding-system-groups/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-binding-system-groups-policy
spec:
  steps:
  - name: test-restrict-binding-system-groups
    try:
    - apply:
        file: ../restrict-binding-system-groups.yaml
    - assert:
        file: policy-assert.yaml
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../restrict-binding-system-groups.yaml | kubectl apply -f - 
    - assert:
        file: enforce-policy-assert.yaml
    - apply:
        file: good-resource.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-resource.yaml
